projetGL/src/test/deca/context/valid/provided/valid_bool_3.deca
//Descriptif:Ce test vérifie l'opérateur logique ||.

{
  boolean a = true;
  boolean b = false;

  // a est true, donc b ne sera pas évalué
  a || (b = true); // true

}
