projetGL/src/test/deca/context/invalid/provided/10_invalid_bool_expr_with_int.deca
{
    int x;
    boolean b;

    x = 5;
    // Erreur : (x && true) => x est un int, pas un boolean
    b = (x && true); 

    println("Ne devrait jamais s'afficher");
}
